--- a/index4.html
+++ b/index4.html
@@ -4,22 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230807190129"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230807190129"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230807190129"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230807190129"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230810144048"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230810144048"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230810144048"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230810144048"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230810144048"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230807190129" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230810144048" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230807190129">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230810144048">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230807190129"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230810144048"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230807190129" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230810144048" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -86,12 +89,12 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230807190129" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230807190129"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230810144048" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230810144048"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
-    <div id="page" class="pagework page4" data-scroll-container>
+    <div id="page" class="pagework page4 as" data-scroll-container>
       <div class="rows_2" data-scroll-section>
         <div id="prew" class="Prew">
           <div class="container">
@@ -227,14 +230,14 @@
             <a href="img/aston_mobile_3.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
               <picture><source srcset="img/aston_mobile_3.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile_3.jpg" alt=''></picture>
             </a>
-            <a href="img/aston_mobile.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
-              <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile.jpg" alt=''></picture>
+            <a href="img/aston_mobile_5.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
+              <picture><source srcset="img/aston_mobile_5.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile_5.jpg" alt=''></picture>
             </a>
-            <a href="img/aston_mobile.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
-              <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile.jpg" alt=''></picture>
+            <a href="img/aston_mobile_8.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
+              <picture><source srcset="img/aston_mobile_8.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile_8.jpg" alt=''></picture>
             </a>
-            <a style="margin-right: 10vw;" href="img/aston_mobile.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
-              <picture><source srcset="img/aston_mobile.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile.jpg" alt=''></picture>
+            <a style="margin-right: 10vw;" href="img/aston_mobile_7.jpg" data-pswp-width="638" data-pswp-height="956" target="_blank" class="mobile-carusel-item">
+              <picture><source srcset="img/aston_mobile_7.webp" type="image/webp"><img width="100%" class="mobile-carusel-item-img" src="img/aston_mobile_7.jpg" alt=''></picture>
             </a>
   
   
@@ -383,8 +386,8 @@
 
               <div class="justify-content-center d-flex w-100">
 
-                <div class="col-5 mob_on_obj">
-                  <div class="avatar avatarCenter_mob">
+                <div class="col-5 mob_on_obj avatarCenter_last">
+                  <div class="avatar avatarCenter_mob ">
                     <picture><source srcset="img/memoji_5.webp" type="image/webp"><img src="img/memoji_5.png" alt=""></picture>
                   </div>
                   <p>"Planning to buy an Aston Martin, but I'm not sure how to go about it. Where can I find information about dealers and
@@ -647,23 +650,23 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230807190129"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230807190129"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230810144048"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230810144048"></script> -->
 
 
 
 
 
-<script src="files/script /swup.js?_v=20230807190129"></script>
-<script src="files/script /locomotive.js?_v=20230807190129"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230807190129"></script>
+<script src="files/script /swup.js?_v=20230810144048"></script>
+<script src="files/script /locomotive.js?_v=20230810144048"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230810144048"></script>
 
-<script src="files/script /tilt.js?_v=20230807190129"></script>
-<script type="module" src="files/script /script.js?_v=20230807190129"></script>
+<script src="files/script /tilt.js?_v=20230810144048"></script>
+<script type="module" src="files/script /script.js?_v=20230810144048"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230807190129"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230810144048"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
