--- a/index11.html
+++ b/index11.html
@@ -4,25 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230810144048"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230810144048"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230810144048"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230810144048"></script>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230810144048"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230811113939"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230811113939"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230811113939"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230811113939"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811113939"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230810144048" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230811113939" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230810144048">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230811113939">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230810144048"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230811113939"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230810144048" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230811113939" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -63,6 +62,7 @@
 			<div class="progresss"></div>
 		</div>
 	</div>
+	<div class="backgraund_bar_box"></div>
 </div>
 <div class="rotate_box">
 	<div>
@@ -89,8 +89,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230810144048" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230810144048"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230811113939" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230811113939"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -322,8 +322,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230810144048"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230810144048"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230811113939"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230811113939"></script> -->
 
 
 
@@ -334,17 +334,17 @@
 
 
 
-<script src="files/script /swup.js?_v=20230810144048"></script>
-<script src="files/script /locomotive.js?_v=20230810144048"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230810144048"></script>
+<script src="files/script /swup.js?_v=20230811113939"></script>
+<script src="files/script /locomotive.js?_v=20230811113939"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230811113939"></script>
 
-<script src="files/script /tilt.js?_v=20230810144048"></script>
-<script type="module" src="files/script /script.js?_v=20230810144048"></script>
+<script src="files/script /tilt.js?_v=20230811113939"></script>
+<script type="module" src="files/script /script.js?_v=20230811113939"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230810144048"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811113939"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
