--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230811113939"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230811113939"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230811113939"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230811113939"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811113939"
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230811171940"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230811171940"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230811171940"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230811171940"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230811171940"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811171940"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230811113939" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230811171940" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230811113939">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230811171940">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230811113939"></link>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230811171940"></link>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230811113939" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230811171940" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -104,6 +106,7 @@
             <div class="col-10 position-relative block_main_home">
               <a href="index3.html">
                 <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
+                <div class="lds-dual-ring lds-dual-ring_home"></div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -130,6 +133,7 @@
             <div class="col-10 position-relative block_main_home">
               <a href="index4.html">
                 <picture><source srcset="img/aston_martin_main.webp" type="image/webp"><img id="img_main_2" class="mobile_pic anim-pic" src="img/aston_martin_main.jpg" alt=""></picture>
+                <div class="lds-dual-ring lds-dual-ring_home"></div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -156,6 +160,7 @@
             <div class="col-10 position-relative block_main_home">
               <a href="index5.html">
                 <picture><source srcset="img/Landing_Memoj.webp" type="image/webp"><img id="img_main_3" class="mobile_pic anim-pic" src="img/Landing_Memoj.jpg" alt=""></picture>
+                <div class="lds-dual-ring lds-dual-ring_home"></div>
               </a>
               <div class="row row_info_main anim-pic">
                 <div class="col-6">
@@ -368,16 +373,16 @@
 </body>
 
 
-<script src="files/script /swup.js?_v=20230811113939"></script>
-<script src="files/script /locomotive.js?_v=20230811113939"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230811113939"></script>
-<!-- <script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js?_v=20230811113939"></script> -->
-<script src="files/script /tilt.js?_v=20230811113939"></script>
-<script type="module" src="files/script /script.js?_v=20230811113939"></script>
+<script src="files/script /swup.js?_v=20230811171940"></script>
+<script src="files/script /locomotive.js?_v=20230811171940"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230811171940"></script>
+<!-- <script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js?_v=20230811171940"></script> -->
+<script src="files/script /tilt.js?_v=20230811171940"></script>
+<script type="module" src="files/script /script.js?_v=20230811171940"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811113939"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230811171940"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
