--- a/index5.html
+++ b/index5.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230815171741"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230815171741"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230815171741"></script>
-  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230815171741"></script>
-  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230815171741"></script>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230818171043"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230818171043"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@3?_v=20230818171043"></script>
+  <script src="https://unpkg.com/@swup/overlay-theme@2?_v=20230818171043"></script>
+  <script src="https://unpkg.com/@swup/fade-theme@2?_v=20230818171043"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230815171741"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230818171043"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230815171741" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css2?family=Anek+Kannada:wght@100;200;300;400;500&family=Inter:wght@100;200;300&family=Italiana&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230818171043"
+  rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230815171741">
 
-  <link rel="stylesheet" href="css/style.min.css?_v=20230815171741"></link>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.7/dist/photoswipe.css?_v=20230818171043">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230815171741" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.min.css?_v=20230818171043"></link>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230818171043" rel="stylesheet"integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
   
   <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -91,8 +91,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230815171741" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230815171741"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230818171043" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230818171043"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -141,26 +141,26 @@
             <div class="carousel-item active">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_3.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_1.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_2.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_2.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_2.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_1.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_1.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_3.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_3.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="row justify-content-center">
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_4.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_4.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_4.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_5.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_5.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_5.jpg" alt="ASTON"></picture>
                 </div>
                 <div class="col-3">
-                  <picture><source srcset="img/friesa_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/friesa_post_6.jpg" alt="ASTON"></picture>
+                  <picture><source srcset="img/memoji_post_6.webp" type="image/webp"><img width="100%" class="carousel_img" id="img_back_AS_2" src="img/memoji_post_6.jpg" alt="ASTON"></picture>
                 </div>
               </div>
             </div>
@@ -222,24 +222,81 @@
           </div>
           </div>
         </div>
+        <div style="height: auto;" class="container tasks_box">
+          <div class="row">
+            <div class="col-3 img_as">
+              <h2>Tasks ✍️🧑‍💻🤝</h2>
+            </div>
+            <div class="col-9 img_as">
+              <ol><br>
+                <li>
+                  Enhance User Experience (UX):
+                  <ul>
+                    <li>Develop an intuitively understandable and user-friendly navigation, enabling quick user access to necessary information.</li>
+                  </ul>
+                </li><br>
+                <li>
+                  Create an Attractive and Modern User Interface (UI):
+                  <ul>
+                    <li>Utilize modern design trends and elements to create a unique and memorable website appearance.</li>
+                  </ul>
+                </li><br>
+                <li>
+                  Product Display Window and Information:
+                  <ul>
+                    <li>Design a compact and convenient window displaying phone accessories along with key information about each product.</li>
+                  </ul>
+                </li><br>
+                <li>
+                  Product and Ordering Information:
+                  <ul>
+                    <li>Present comprehensive descriptions for each accessory, including technical specifications and unique features.</li>
+                  </ul>
+                </li><br>
+                  <li>
+                    Order Placement System:
+                    <ul>
+                      <li>Implement an intuitive, minimal-step order placement system.
+                      </li>
+                    </ul>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="memoji_target">
+            <div class="container">
+              <div class="row">
+                <div class="col-6 mob_on_full">
+                  <h2>Target audience</h2>
+                </div>
+                <div class="col-6 mob_on_full">
+                  <p>The target audience for Friesa includes movie enthusiasts and social media-savvy individuals who are looking for a
+                  premium online cinema experience. This demographic comprises tech-savvy users aged 18-40, with an affinity for
+                  high-quality films and a desire to engage in a social community centered around movies. Friesa's target audience values
+                  convenience, aesthetics, and the ability to connect and share their cinematic interests with others.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_memoji">
 
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-8 mob_on_full">
                   <picture><source srcset="img/memo_img.webp" type="image/webp"><img id="img_back_MJ_3" width="100%" src="img/memo_img.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #867d47;   text-align: justify;" class="col-7">
-                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
-                    experience and
-                    exemplify
-                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
-                    design, this
-                    captivating website boasts a range of features that set it apart from the rest.</h3>
+                  <h3>
+                  The advantage of this design is that it consolidates all actions on a single screen, preventing distractions and
+                  enabling focused, targeted interactions.
+                  </h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -259,14 +316,14 @@
             </div>
           </div>
           <div class="row colors_box">
-            <div class="col-4 color_bl_1 bl_style">
-              <h3>#000000</h3>
+            <div class="col-4 color_bl_1 bl_style "  style="background-color: #4A86FF;">
+              <h3>#4A86FF</h3>
             </div>
-            <div class="col-4 color_bl_2 bl_style" style="background-color: #20958B;">
-              <h3>#20958B</h3>
+            <div class="col-4 color_bl_2 bl_style" style="background-color: #ACDFCA;">
+              <h3>#ACDFCA</h3>
             </div>
-            <div class="col-4 color_bl_3 bl_style" style="background-color: #1E7A51;">
-              <h3>#1E7A51</h3>
+            <div class="col-4 color_bl_3 bl_style" style="background-color: #C0C300;">
+              <h3>#C0C300</h3>
             </div>
             <div class="fonts_box_back">
               <div class="fonts_box">
@@ -277,7 +334,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12 main_font">
-                    <h3>Anek Kannada</h3>
+                    <h3>Roboto</h3>
                   </div>
                   <div class="col-12 font_letter">
                     <h4>
@@ -289,8 +346,8 @@
                   </div>
                 </div>
                 <div class="row color_site_box">
-                  <div class="col-5 color_site color_bl_4" style="background-color: #FFF500;">
-                    <h3 style="color: rgb(54, 54, 54);">#FFF500</h3>
+                  <div class="col-5 color_site color_bl_4" style="background-color: #EF3959;">
+                    <h3 style="color: rgb(54, 54, 54);">#EF3959</h3>
                   </div>
                   <div class="col-5 color_site color_bl_5" style="background-color: #20958B;">
                     <h3>#20958B</h3>
@@ -301,7 +358,7 @@
           </div>
         </div>
       </div>
-        <div class="pg-1_bk_3">
+        <div class="pg-1_bk_3 memoji_text_last">
           <div class="container">
             <div class="row text_plus">
             <div class="col-6">
@@ -373,8 +430,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230815171741"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230815171741"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230818171043"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230818171043"></script> -->
 
 
 
@@ -384,16 +441,16 @@
 
 
 
-<script src="files/script /swup.js?_v=20230815171741"></script>
-<script src="files/script /fast-image-zoom.js?_v=20230815171741"></script>
+<script src="files/script /swup.js?_v=20230818171043"></script>
+<script src="files/script /fast-image-zoom.js?_v=20230818171043"></script>
 
-<script src="files/script /tilt.js?_v=20230815171741"></script>
-<script type="module" src="files/script /script.js?_v=20230815171741"></script>
+<script src="files/script /tilt.js?_v=20230818171043"></script>
+<script type="module" src="files/script /script.js?_v=20230818171043"></script>
 
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230815171741"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230818171043"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
 </footer>
